@@ -16,7 +16,7 @@
 # along with ShieldBlaze ExpressGateway.  If not, see <https://www.gnu.org/licenses/>.
 #
 
-MAVEN_OPTS="-Xms512m -Xmx1024m -XX:+UseShenandoahGC"
+MAVEN_OPTS="-Xms512m -Xmx1024m -XX:+UseShenandoahGC --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true"
 export MAVEN_OPTS
 
 #Initialize everything before running
